Modal de agregar hasta los datos de la dirección

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -1,5 +1,11 @@
+#common
 button.accept=aceptar
+button.cancel=cancelar
+button.add=agregar
 
 #people
 student=alumno
 teacher=profesor
+
+#school
+scchool.add.title=Nueva Escuela
