Modal para revision con juan

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -1,4 +1,4 @@
-#common
+#objects
 button.accept=aceptar
 button.cancel=cancelar
 button.add=agregar
@@ -8,4 +8,20 @@ student=alumno
 teacher=profesor
 
 #school
-scchool.add.title=Nueva Escuela
+school.add.title=nueva escuela
+school.cct=clave centro trabajo
+school.name=nombre
+school.colony=colonia
+school.postalcode=c\u00F3digo postal
+school.city=municipio
+school.town=estado
+school.street=calle
+school.street.num.ext=n\u00FAmero exterior
+school.street.num.int=n\u00FAmero interior
+
+#unicode
+#\u00E1 á
+#\u00E9 é
+#\u00ED í
+#\u00F3 ó
+#\u00FA ú
