--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -18,6 +18,7 @@ school.town=estado
 school.street=calle
 school.street.num.ext=n\u00FAmero exterior
 school.street.num.int=n\u00FAmero interior
+school.blockreason.title=Motivo de Bloqueo
 
 #unicode
 #\u00E1 á
