correcion a la vista detalles escuela

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -21,6 +21,9 @@ school.street.num.ext=n\u00FAmero exterior
 school.street.num.int=n\u00FAmero interior
 school.blockreason.title=Motivo de Bloqueo
 
+#contact
+
+
 #unicode
 #\u00E1 á
 #\u00E9 é
