Elimina y bloquea /home/antonio/Descargas/GochiHand-Regular.ttf

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -3,6 +3,10 @@ button.accept=aceptar
 button.cancel=cancelar
 button.add=agregar
 button.search=buscar
+button.detail=detalle
+button.edit=editar
+button.remove=eliminar
+button.block=bloquear
 
 #people
 student=alumno
@@ -17,9 +21,14 @@ school.postalcode=c\u00F3digo postal
 school.city=municipio
 school.town=estado
 school.street=calle
+school.status=estatus
+school.licenses=licencias
+school.remaining.days=d\u00EDas restantes
 school.street.num.ext=n\u00FAmero exterior
 school.street.num.int=n\u00FAmero interior
 school.blockreason.title=Motivo de Bloqueo
+school.remove.title=Eliminar escuela {0}
+school.remove.message=\u00BFEst\u00E1 seguro en borrar la escuela {0}?, No se prodr\u00E1 recuperar los datos
 
 #contact
 
@@ -30,3 +39,4 @@ school.blockreason.title=Motivo de Bloqueo
 #\u00ED í
 #\u00F3 ó
 #\u00FA ú
+#\u00BF ¿
