Vista de la escuelas, alimina, bloquea y actualiza

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -7,6 +7,7 @@ button.detail=detalle
 button.edit=editar
 button.remove=eliminar
 button.block=bloquear
+button.active=activar
 
 #people
 student=alumno
@@ -26,11 +27,17 @@ school.licenses=licencias
 school.remaining.days=d\u00EDas restantes
 school.street.num.ext=n\u00FAmero exterior
 school.street.num.int=n\u00FAmero interior
-school.blockreason.title=Motivo de Bloqueo
+school.blockreason.title=motivo de bloqueo
 school.remove.title=Eliminar escuela {0}
 school.remove.message=\u00BFEst\u00E1 seguro en borrar la escuela {0}?, No se prodr\u00E1 recuperar los datos
 
-#contact
+school.label=escuelas
+
+#catalogs
+catalog.label=catalogos
+catalog.blockingreason=motivos bloqueo
+catalog.colony=colonias
+catalog.contact=contactos
 
 
 #unicode
