Se agregaron comun.properties

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -33,11 +33,24 @@ school.remove.message=\u00BFEst\u00E1 seguro en borrar la escuela {0}?, No se pr
 
 school.label=escuelas
 
-#catalogs
+#catalogsschool contacts
 catalog.label=catalogos
 catalog.blockingreason=motivos bloqueo
 catalog.colony=colonias
 catalog.contact=contactos
+
+#school-details
+
+school-details.heading=Detalles Escuela
+school-details.contact=Contactos de la escuela
+school-details.new=Nuevo contacto
+school-details.table.name=Nombre
+school-details.table.type=tipo
+school-details.table.phone=Tel\u00E9fono
+school-details.table.option=opciones
+school-details.table.option.edit=editar contacto
+school-details.table.option.delete=eliminar contacto
+
 
 
 #unicode
