Tabla de motivos de bloqueo

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -9,6 +9,9 @@ button.remove=eliminar
 button.block=bloquear
 button.active=activar
 
+#label
+label.option=opciones
+
 #people
 student=alumno
 teacher=profesor
@@ -24,6 +27,7 @@ school.town=estado
 school.street=calle
 school.status=estatus
 school.licenses=licencias
+school.option=opciones
 school.remaining.days=d\u00EDas restantes
 school.street.num.ext=n\u00FAmero exterior
 school.street.num.int=n\u00FAmero interior
@@ -33,11 +37,14 @@ school.remove.message=\u00BFEst\u00E1 seguro en borrar la escuela {0}?, No se pr
 
 school.label=escuelas
 
-#catalogsschool contacts
+#catalogs
 catalog.label=catalogos
 catalog.blockingreason=motivos bloqueo
 catalog.colony=colonias
 catalog.contact=contactos
+catalog.description=descripci\u00F3n
+catalog.new=nuevo cat\u00E1logo
+catalog.new.placeholder=escriba el nuevp motivo de bloqueo
 
 #school-details
 
