acomodar los grid de motivos

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -45,6 +45,10 @@ catalog.contact=contactos
 catalog.description=descripci\u00F3n
 catalog.new=nuevo cat\u00E1logo
 catalog.new.placeholder=escriba el nuevp motivo de bloqueo
+catalog.zipcode=c\u00F3digo postal
+catalog.name=nombre
+catalog.town=municipio
+catalog.state=estado
 
 #school-details
 
