--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -49,6 +49,7 @@ catalog.zipcode=c\u00F3digo postal
 catalog.name=nombre
 catalog.town=municipio
 catalog.state=estado
+catalog.typescontacts=tipos de contactos
 
 #school-details
 
