Paginación para motivos de bloqueo

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -8,6 +8,8 @@ button.edit=editar
 button.remove=eliminar
 button.block=bloquear
 button.active=activar
+button.next=siguiente
+button.back=atr\u00E1s
 
 #label
 label.option=opciones
@@ -44,6 +46,7 @@ catalog.colony=colonias
 catalog.contact=contactos
 catalog.description=descripci\u00F3n
 catalog.new=nuevo cat\u00E1logo
+catalog.edit=editar cat\u00E1logo
 catalog.new.placeholder=escriba el nuevp motivo de bloqueo
 catalog.zipcode=c\u00F3digo postal
 catalog.name=nombre
