Catalogo de colonias busca por codigo postal y renderiza la tabla, navegacion y validacion

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -13,7 +13,7 @@ button.back=atr\u00E1s
 
 #label
 label.option=opciones
-label.select=seleccione una opcion
+label.select=seleccione una opci\u00F3n
 
 #people
 student=alumno
@@ -36,7 +36,7 @@ school.street.num.ext=n\u00FAmero exterior
 school.street.num.int=n\u00FAmero interior
 school.blockreason.title=motivo de bloqueo
 school.remove.title=Eliminar escuela {0}
-school.remove.message=\u00BFEst\u00E1 seguro en borrar la escuela {0}?, No se prodr\u00E1 recuperar los datos
+school.remove.message=\u00BFEst\u00E1 seguro en borrar la escuela {0}?, no se prodr\u00E1 recuperar los datos
 
 school.label=escuelas
 
@@ -48,7 +48,7 @@ catalog.contact=contactos
 catalog.description=descripci\u00F3n
 catalog.new=nuevo cat\u00E1logo
 catalog.edit=editar cat\u00E1logo
-catalog.new.placeholder=escriba el nuevp motivo de bloqueo
+catalog.new.placeholder=escriba el nuevo motivo de bloqueo
 catalog.zipcode=c\u00F3digo postal
 catalog.name=nombre
 catalog.town=municipio
