Listado de escuelas, navegacion con la pageniación completo

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -14,6 +14,7 @@ button.back=atr\u00E1s
 #label
 label.option=opciones
 label.select=seleccione una opci\u00F3n
+label.pages=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
 
 #people
 student=alumno
@@ -21,7 +22,7 @@ teacher=profesor
 
 #school
 school.add.title=nueva escuela
-school.cct=clave centro trabajo
+school.cct=cct
 school.name=nombre
 school.colony=colonia
 school.postalcode=c\u00F3digo postal
