detalles escuela formulario detalles(falta licencias)

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -56,17 +56,29 @@ catalog.town=municipio
 catalog.state=estado
 catalog.typescontacts=tipos de contactos
 
-#school-details
+#school.details
 
-school-details.heading=Detalles Escuela
-school-details.contact=Contactos de la escuela
-school-details.new=Nuevo contacto
-school-details.table.name=Nombre
-school-details.table.type=tipo
-school-details.table.phone=Tel\u00E9fono
-school-details.table.option=opciones
-school-details.table.option.edit=editar contacto
-school-details.table.option.delete=eliminar contacto
+school.details.heading=Detalles Escuela
+school.details.contact=Contactos de la escuela
+school.details.new=Nuevo contacto
+school.details.zipcode=Codigo postal
+school.details.colony=Colonia
+school.details.town=Municipio
+school.details.state=Estado
+school.details.street=Calle
+school.details.number.out=Numero exterior
+school.details.number.in=Numero interior
+school.details.name=Nombre
+school.detail.blockade=Estado de Bloqueo
+school.details.license=Licencias
+school.details.table.name=Nombre
+school.details.table.type=tipo
+school.details.table.phone=Tel\u00E9fono
+school.details.table.option=opciones
+school.details.table.option.edit=editar contacto
+school.details.table.option.delete=eliminar contacto
+
+
 
 
 
