detalles escuela formulario detalles dropdown (falta licencia de nuevo)

--- a/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun_es.properties
@@ -58,8 +58,8 @@ catalog.typescontacts=tipos de contactos
 
 #school.details
 
-school.details.heading=Detalles Escuela
-school.details.contact=Contactos de la escuela
+school.details.heading=Detalles de la Escuela
+school.details.contact=Contactos 
 school.details.new=Nuevo contacto
 school.details.zipcode=Codigo postal
 school.details.colony=Colonia
