Actualizacion de Resource (activities.word.order.instruction.title)

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -22,12 +22,13 @@ dashboard.not.homework= No assignments
 activities.bar.icon.transcript= Video 
 activities.bar.icon.match= Comprehension Match
 activities.bar.icon.video= Listening Challenge
-activities.bar.icon.order=
+activities.bar.icon.order= word game
 #Mix and Match
 activities.title.match.sentence.question=Mix
 activities.title.match.sentence.answer=Match
 #Word Game
 activities.title.order.words= word game
+activities.word.order.instruction.title=order the words to form correct sentences
 #Your Space
 #More things to do
 activities.title.order.sentences=What happened?
