--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -15,7 +15,7 @@ dashboard.edit.profile= Edit profile
 dashboard.homework=Assignment
 dashboard.total.activities=Total 
 dashboard.teacher= Teacher
-dashboard.homework.done=already done
+dashboard.homework.done=activity progress
 dashboard.not.homework= No assignments 
 #Activities
 #Navigation bar
