En el login, ahora muestra mensaje desde bundles

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -29,6 +29,10 @@ activities.title.match.sentence.answer=Match
 #Word Game
 activities.title.order.words= word game
 activities.word.order.instruction.title=order the words to form correct sentences
+
+#login
+login.valid.password=Estimado usuario, de favor seleccionar una contraseña
+
 #Your Space
 #More things to do
 activities.title.order.sentences=What happened?
