Se agregan las traducciones para dentro de los javascript

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -40,6 +40,13 @@ activities.title.order.sentences=What happened?
 activities.title.comple.all.sentences=Gap filling!
 # Arrange words
 title.description.order.words=arrange words
+
+#activity
+send.message=se ha enviado de forma correcta tu respuesta
+send.message.error=es necesario relacionar más ejercicios
+send.message.transcript=al selecionar esta tarea, no podrá selecciona la actividad de video o ver algun otro transcript
+send.message.not.send=no se puede enviar la respuesta hasta terminar de resolver
+
 #Watch the video completely
 activities.title.description.please.watch.the= please, watch it
 title.description.full.video= complete video!
