Se agregan las traducciones

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -1,55 +1,42 @@
-#menu
-for.all.views.profile=profile
-for.all.views.dashboard=Home
-for.all.views.activity=Activities
-for.all.views.library=Library
-for.all.views.undefined=indefinido
-for.all.views.glossary=Words to know
-for.all.views.mind.map=Think-Develop and share
-#dashboard
-dashboard.title=Overall
-dashboard.email=email
-dashboard.grade=school year
-dashboard.nivel=Level
-dashboard.edit.profile= Edit profile
-dashboard.homework=Assignment
-dashboard.total.activities=Total 
-dashboard.teacher= Teacher
+dashboard.nivel=level
+dashboard.edit.profile=edit profile
+dashboard.homework=assignment
+dashboard.total.activities=total 
+dashboard.teacher=teacher
 dashboard.homework.done=activity progress
-dashboard.not.homework= No assignments 
+dashboard.not.homework=No assignments 
 #Activities
 #Navigation bar
-activities.bar.icon.transcript= Video 
-activities.bar.icon.match= Comprehension Match
-activities.bar.icon.video= Listening Challenge
-activities.bar.icon.order= word game
+activities.bar.icon.transcript=video 
+activities.bar.icon.match=comprehension match
+activities.bar.icon.video=listening challenge
+activities.bar.icon.order=word game
 #Mix and Match
-activities.title.match.sentence.question=Mix
-activities.title.match.sentence.answer=Match
+activities.title.match.sentence.question=mix
+activities.title.match.sentence.answer=match
 #Word Game
-activities.title.order.words= word game
+activities.title.order.words=word game
 activities.word.order.instruction.title=order the words to form correct sentences
-
-#login
-login.valid.password=Estimado usuario, de favor seleccionar una contraseña
 
 #Your Space
 #More things to do
-activities.title.order.sentences=What happened?
+activities.title.order.sentences=what happened?
 #Complete
-activities.title.comple.all.sentences=Gap filling!
+activities.title.comple.all.sentences=gap filling!
 # Arrange words
 title.description.order.words=arrange words
 
+
+
 #activity
-send.message=se ha enviado de forma correcta tu respuesta
-send.message.error=es necesario relacionar más ejercicios
-send.message.transcript=al selecionar esta tarea, no podrá selecciona la actividad de video o ver algun otro transcript
-send.message.not.send=no se puede enviar la respuesta hasta terminar de resolver
+send.message=answers received
+send.message.error=85% of answers are requiered. 
+send.message.transcript=you will need up to 10 minutes to complete this activity, do you have time?
+send.message.not.send=please fill in the blank to send!
 
 #Watch the video completely
-activities.title.description.please.watch.the= please, watch it
-title.description.full.video= complete video!
+activities.title.description.please.watch.the=please, watch it
+title.description.full.video=the video!
 #graphic organizer 2
 mindmap.map2.title.description=blank cause and effect Diagram
 mindmap.activities.map2.title.answered=answered
@@ -57,10 +44,10 @@ mindmap.activities.map2.title.answered=answered
 mindmap.mindmap.map3.title.description=cronological order writing
 #graphic organizer 4
 mindmap.map4.title.description.compare=compare and contrast
-mindmap.map4.title.description.how=how two thigs are a like and how they are diferent
+mindmap.map4.title.description.how=how two things are a like and how they are diferent
 #graphic organizer 5
 mindmap.map5.title.compare=compare & contrast
-map5.title.description.how=how the same
+map5.title.description.how=how are the same
 #graphic organizer 7
 mindmap.map7.title.steps=steps to do an experiment
 #graphic organizer 8
@@ -68,7 +55,7 @@ mindmap.map8.title.supporting=supporting deails
 #graphic organizer 9
 mindmap.map9.title.main=main idea :
 #graphic organizer 11
-mindmap.map10.title.secuence=secuence order
+mindmap.map10.title.secuence=sequence order
 #graphic organizer 12
 mindmap.map12.title.sequencing=sequencing timeline
 #graphic organizer 14
@@ -80,15 +67,5 @@ mindmap.map15.title.study=Study
 mindmap.map15.title.vocabulary.study=Vocabulary Study
 mindmap.map16.title.word=Word :
 mindmap.map16.title.root=root :
-more.activity.title.talk= Let's talk!
+more.activity.title.talk=let's talk!
 more.activity.title.matching.words=Mix&Match
-free.library.title.a1=Level A1
-
-#unicode
-#\u00E1 á
-#\u00E9 é
-#\u00ED í
-#\u00F3 ó
-#\u00FA ú
-#\u00BF ¿
-#\u0148 ñ
