--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -1,10 +1,22 @@
+#menu
+for.all.views.profile=profile
+for.all.views.dashboard=home
+for.all.views.activity=activities
+for.all.views.library=library
+for.all.views.practices=practices
+for.all.views.glossary=words to know
+for.all.views.mind.map=think-Develop and share
+#dashboard
+dashboard.title=overall
+dashboard.email=email
+dashboard.grade=school year
 dashboard.nivel=level
 dashboard.edit.profile=edit profile
 dashboard.homework=assignment
 dashboard.total.activities=total 
 dashboard.teacher=teacher
 dashboard.homework.done=activity progress
-dashboard.not.homework=No assignments 
+dashboard.not.homework=no assignments 
 #Activities
 #Navigation bar
 activities.bar.icon.transcript=video 
@@ -18,11 +30,16 @@ activities.title.match.sentence.answer=match
 activities.title.order.words=word game
 activities.word.order.instruction.title=order the words to form correct sentences
 
+#login
+login.valid.password=please,choose your password
+
 #Your Space
 #More things to do
 activities.title.order.sentences=what happened?
+
 #Complete
 activities.title.comple.all.sentences=gap filling!
+
 # Arrange words
 title.description.order.words=arrange words
 
@@ -35,8 +52,9 @@ send.message.transcript=you will need up to 10 minutes to complete this activity
 send.message.not.send=please fill in the blank to send!
 
 #Watch the video completely
+title.description.full.video=complete video!
 activities.title.description.please.watch.the=please, watch it
-title.description.full.video=the video!
+
 #graphic organizer 2
 mindmap.map2.title.description=blank cause and effect Diagram
 mindmap.activities.map2.title.answered=answered
@@ -56,16 +74,18 @@ mindmap.map8.title.supporting=supporting deails
 mindmap.map9.title.main=main idea :
 #graphic organizer 11
 mindmap.map10.title.secuence=sequence order
+
 #graphic organizer 12
 mindmap.map12.title.sequencing=sequencing timeline
 #graphic organizer 14
 mindmap.map14.title.main=main idea and details organizer
 #graphic organizer 15
-mindmap.map15.title.picture=Picture:
-mindmap.map15.title.vocabulary=Vocabulary
-mindmap.map15.title.study=Study
-mindmap.map15.title.vocabulary.study=Vocabulary Study
-mindmap.map16.title.word=Word :
+mindmap.map15.title.picture=picture:
+mindmap.map15.title.vocabulary=vocabulary
+mindmap.map15.title.study=study
+mindmap.map15.title.vocabulary.study=vocabulary study
+mindmap.map16.title.word=word :
 mindmap.map16.title.root=root :
 more.activity.title.talk=let's talk!
-more.activity.title.matching.words=Mix&Match
+more.activity.title.matching.words=mix&match
+free.library.title.a1=level A1
