actualizacion de properties de boton y alumnos

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -3,11 +3,11 @@ for.all.views.profile=profile
 for.all.views.dashboard=home
 for.all.views.activity=activities
 for.all.views.library=library
-for.all.views.practices=practices
+for.all.views.practices=practice your english
 for.all.views.glossary=words to know
-for.all.views.mind.map=think-Develop and share
+for.all.views.mind.map=think-develop and share
 #dashboard
-dashboard.title=overall
+dashboard.title=your stats
 dashboard.email=email
 dashboard.grade=school year
 dashboard.nivel=level
@@ -52,7 +52,7 @@ send.message.transcript=you will need up to 10 minutes to complete this activity
 send.message.not.send=please fill in the blank to send!
 
 #Watch the video completely
-title.description.full.video=complete video!
+title.description.full.video=the video!
 activities.title.description.please.watch.the=please, watch it
 
 #graphic organizer 2
