estilos al card de videos

--- a/tecolotl-web/src/main/resources/boton_en.properties
+++ b/tecolotl-web/src/main/resources/boton_en.properties
@@ -12,7 +12,7 @@ back=back
 clean=clean
 update=update
 submit=send
-homework= send assignment
+homework= assignment
 do.homework=check assignment
 end=finish and send
 
