en la vista de more-activity.xhtml se traudjeron los titulos de las actividades

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -86,6 +86,11 @@ mindmap.map15.title.study=study
 mindmap.map15.title.vocabulary.study=vocabulary study
 mindmap.map16.title.word=word :
 mindmap.map16.title.root=root :
+
+#more activity
 more.activity.title.talk=let's talk!
 more.activity.title.matching.words=mix&match
-free.library.title.a1=level A1
+more.activity.title.order.prayer=order prayer
+more.activity.title.match.image=match image
+more.activity.title.speake=speake
+more.activity.title.complete.prayers=complete prayers
