se agregaron definiciones de ayuda en el diccionario de palabras para actividades y la de mas activivades.

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -50,6 +50,13 @@ send.message=answers received
 send.message.error=85% of answers are requiered. 
 send.message.transcript=you will need up to 10 minutes to complete this activity, do you have time?
 send.message.not.send=please fill in the blank to send!
+send.message.sentence.tip=seleccione una palabra para completar oración
+activity.help.message.video=Watch the video carefully
+activity.help.message.match=Match the columns
+activity.help.message.words=Make sentences using the words provided 
+activity.help.message.fill.in.the.blanks=Watch the video and fill in the blanks
+
+
 
 #Watch the video completely
 title.description.full.video=the video!
@@ -69,7 +76,7 @@ map5.title.description.how=how are the same
 #graphic organizer 7
 mindmap.map7.title.steps=steps to do an experiment
 #graphic organizer 8
-mindmap.map8.title.supporting=supporting deails
+mindmap.map8.title.supporting=supporting details
 #graphic organizer 9
 mindmap.map9.title.main=main idea :
 #graphic organizer 11
@@ -94,3 +101,6 @@ more.activity.title.order.prayer=order prayer
 more.activity.title.match.image=match image
 more.activity.title.speake=speake
 more.activity.title.complete.prayers=complete prayers
+more.activity.help.message.order.sentences=Order the sentences
+more.activity.help.message.match.image=Match the image with its meaning
+more.activity.help.message.select.word=select a word to complete sentence
