se quita el uk-textprimary

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -17,6 +17,7 @@ dashboard.total.activities=total
 dashboard.teacher=teacher
 dashboard.homework.done=activity progress
 dashboard.not.homework=no assignments 
+dashboard.empty=empty
 #Activities
 #Navigation bar
 activities.bar.icon.transcript=video 
