--- a/tecolotl-web/src/main/resources/etiqueta_en.properties
+++ b/tecolotl-web/src/main/resources/etiqueta_en.properties
@@ -16,3 +16,6 @@ logging.student=alumno
 logging.nickname=apodo
 logging.forgot.password=olvide mi contrase\u00F1a
 logging.not.account=no tengo una cuenta
+
+#no-encontrado.xhtml
+no.econtrado.title=¡Ups, no encontre la pagina!
