Muestra la lista de los apodos en la vista, display none

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -39,7 +39,7 @@ login.valid.password=please,choose your password
 activities.title.order.sentences=what happened?
 
 #Complete
-activities.title.comple.all.sentences=gap filling!
+activities.title.comple.all.sentences=gap filling
 
 # Arrange words
 title.description.order.words=arrange words
@@ -48,7 +48,7 @@ title.description.order.words=arrange words
 
 #activity
 send.message=answers received
-send.message.error=85% of answers are requiered. 
+send.message.error=85% of answers are requiered.
 send.message.transcript=you will need up to 10 minutes to complete this activity, do you have time?
 send.message.not.send=please fill in the blank to send!
 send.message.sentence.tip=seleccione una palabra para completar oración
