Muestra de forma correcta la vista de califica gramatica

--- a/tecolotl-web/src/main/resources/etiqueta_en.properties
+++ b/tecolotl-web/src/main/resources/etiqueta_en.properties
@@ -1,23 +1,23 @@
-menu=men\u00FA
-options=opciones
+menu=menu
+options=options
 select=seleccione una opci\u00F3n
 word.key=palabra clave
 write.text=escriba texto
-description=descripci\u00F3n
+description=description
 search=Escriba texto para filtrar...
 pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
 status=estatus
-password=contrase\u00F1a
-close.sesion=cerrar sesi\u00F3n
-home=principal
+password=password
+close.sesion=close sesion
+home=home
 logging.registry=registro
-logging.teacher=profesor
-logging.student=alumno
-logging.nickname=apodo
+logging.teacher=teacher
+logging.student=student
+logging.nickname=nickname
 logging.forgot.password=olvide mi contrase\u00F1a
 logging.not.account=no tengo una cuenta
 
 #no-encontrado.xhtml
-no.econtrado.title=¡Ups, no encontre la pagina!
+no.econtrado.title=¡Ups, sorry this page not exist!
 #sin-permiso.xhtml
 sin.permiso.title=Estimado usuario, no pudes visitar esta pagina ya que tu rol es: {0}, dar click en el boton para cerrar sesion
