resourse bundle de un letrero

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -62,6 +62,9 @@ activity.help.message.fill.in.the.blanks=Watch the video and fill in the blanks
 #Watch the video completely
 title.description.full.video=the video!
 activities.title.description.please.watch.the=please, watch it
+#full request transcript
+title.description.full.request=
+
 
 #graphic organizer 2
 mindmap.map2.title.description=blank cause and effect Diagram
