resourse bundle de un letrero

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -63,7 +63,7 @@ activity.help.message.fill.in.the.blanks=Watch the video and fill in the blanks
 title.description.full.video=the video!
 activities.title.description.please.watch.the=please, watch it
 #full request transcript
-title.description.full.request=
+title.description.full.request=You need to fill in all the answers.
 
 
 #graphic organizer 2
