--- a/tecolotl-web/src/main/resources/etiqueta_en.properties
+++ b/tecolotl-web/src/main/resources/etiqueta_en.properties
@@ -2,7 +2,7 @@ menu=menu
 options=options
 select=seleccione una opci\u00F3n
 word.key=palabra clave
-write.text=escriba texto
+write.text=write text
 description=description
 search=Escriba texto para filtrar...
 pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
