hover para visualizar las calificaciones de cada una de las actividades de los alumnos.

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -18,6 +18,8 @@ dashboard.teacher=teacher
 dashboard.homework.done=activity progress
 dashboard.not.homework=no assignments 
 dashboard.empty=empty
+dashboard.score=score
+
 #Activities
 #Navigation bar
 activities.bar.icon.transcript=video 
