--- a/tecolotl-web/src/main/resources/etiqueta_en.properties
+++ b/tecolotl-web/src/main/resources/etiqueta_en.properties
@@ -16,6 +16,7 @@ logging.student=student
 logging.nickname=nickname
 logging.forgot.password=olvide mi contrase\u00F1a
 logging.not.account=no tengo una cuenta
+edit=edit
 
 #no-encontrado.xhtml
 no.econtrado.title=¡Ups, sorry this page not exist!
