se agregan resource booundle

--- a/tecolotl-web/src/main/resources/etiqueta_en.properties
+++ b/tecolotl-web/src/main/resources/etiqueta_en.properties
@@ -20,5 +20,11 @@ edit=edit
 
 #no-encontrado.xhtml
 no.econtrado.title=¡Ups, sorry this page not exist!
+no.encontro.title=P\u00E1gina no encontrada
 #sin-permiso.xhtml
 sin.permiso.title=Estimado usuario, no pudes visitar esta pagina ya que tu rol es: {0}, dar click en el boton para cerrar sesion
+no.permiso.title=Sin permiso
+#no-manejable.xhtml
+no.manejable.title=Estimado usuario tenemos un inconveniente contacte a su administrador
+no.es.manejable.title=No manejable
+
