--- a/tecolotl-web/src/main/resources/etiqueta_en.properties
+++ b/tecolotl-web/src/main/resources/etiqueta_en.properties
@@ -10,13 +10,19 @@ status=estatus
 password=password
 close.sesion=close sesion
 home=home
-logging.registry=registro
+correo.electronico=email
+logging.registry=registry
 logging.teacher=teacher
 logging.student=student
 logging.nickname=nickname
 logging.forgot.password=olvide mi contrase\u00F1a
 logging.not.account=no tengo una cuenta
 edit=edit
+detail=detail
+#
+question=question
+reply=reply
+commentary=commentary
 
 #no-encontrado.xhtml
 no.econtrado.title=¡Ups, sorry this page not exist!
