se actualiza resource booundle de etiqueta de close sesion a close session

--- a/tecolotl-web/src/main/resources/etiqueta_en.properties
+++ b/tecolotl-web/src/main/resources/etiqueta_en.properties
@@ -8,7 +8,7 @@ search=Escriba texto para filtrar...
 pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
 status=estatus
 password=password
-close.sesion=close sesion
+close.sesion=close session
 home=home
 correo.electronico=email
 logging.registry=registry
