actializacion de los properties

--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -1,23 +1,64 @@
 #palabras para la vista principal
 dashboard.title=welcome
-dashboard.nickname=nickname
+dashboard.nickname=student's nickname
 dashboard.email=email
-dashboard.school.cycle=school cycle
-dashboard.start=estar
+dashboard.school.cycle=school year
+dashboard.start=start
 dashboard.end=end
 dashboard.description=description
-dashboard.table.title.group=your groups for this school year
-dashboard.table.title.not.group=does not have groups assigned in this school year
+dashboard.table.title.group=Your classes
+dashboard.table.title.not.group=There's no class assigned
 dashboard.group=group
 dashboard.table.schoolgrade=grade
-dashboard.total.students=total students
+dashboard.total.students=number of students
+
+#admin-alumnos.xhtml
+student.administration.title= administration
+student.administration.nickname= student's nickname
+student.administration.mail=email
+student.administration.group=group
+student.administration.grade=grade
+student.administration.title.students.class=students
+student.administration.colum.name=name
+student.administration.title.passwords=Password
+student.administration.error=Ther's no school year.
+passwords=Passwords
+download=Download
+report=Report
+evaluate=Test
+
+#
+evaluate.developandshare.nickname=nickname
+evaluate.developandshare.mail=email
+evaluate.developandshare.group=group
+evaluate.developandshare.grade=grade
+
+#agregar-csv.xhtml
+agregarcsv.title=add student 
+agregarcsv.file.select=select a CSV file to add students.
+agregarcsv.file=file selection
+agregarscv.student=spaces availability
+agregarscv.add.student=add student 
+agregarscv.student.correct= some students are correct
+agregarscv.student.not.correct=there are some incorrect students
+agregarscv.student.nickname=nickname
+agregarscv.student.name=name
+agregarscv.student.surname=lastname
+agregarscv.student.surname2=second lastname
+agregarscv.student.birthdate=Birthdate
+agregarscv.student.languaje=language level 
+agregarscv.student.sex=genre
+agregarscv.validate=validate
+agregarscv.sex.m=male
+agregarscv.sex.f=female
+
 #tarea-alumno
-tareas.alumno.title = student homework
-tareas.alumno.table.homework=homework
+tareas.alumno.title = student's HW
+tareas.alumno.table.homework=HW
 tareas.alumno.title.description=activity/student
-tareas.alumno.table.assigned=assigned day
+tareas.alumno.table.assigned=assignment
 tareas.alumno.title.table=filters
-tareas.alumno.transcript=transcript
+tareas.alumno.transcript=listening Challenge
 tareas.alumno.table.games=word game
 tareas.alumno.map.mental=think-develop and share
 tareas.alumno.map.match=mix\u0022match
@@ -29,7 +70,13 @@ tareas.alumno.level=lenguage level
 tareas.alumno.grade=school year
 tareas.alumno.group=group
 
-
+#calificacion-gramatica
+calificacion.gramatica.title=word game
+calificacion.gramatica.grouo=detalle grupo
+calificacion.gramatica.score=calificacion
+calificacion.gramatica.not.answer=sin respuesta
+calificacion.gramatica.not.homework=tareas incompletas
+calificacion.gramatica.message.error=al parecer este estudiante no ha terminado de resolver sus todas sus tareas, Esta seguro que desea calificar dichos ejercicios?        
 
 #asignar-actividad.xhtml
 assign.activity.title=assign activity
