--- a/tecolotl-web/src/main/resources/boton_en.properties
+++ b/tecolotl-web/src/main/resources/boton_en.properties
@@ -6,14 +6,14 @@ detail=details
 edit=edit
 remove=delete
 block=block
-active=activate professor
+active=activate teacher
 next=next
 back=back
-clean=clean
+clean=clear
 update=update
 submit=send
-homework= assignment
-do.homework=check assignment
+homework= go to HW
+do.homework=go to HW
 end=finish
 
 ready=ready!
