--- a/tecolotl-web/src/main/resources/etiqueta_en.properties
+++ b/tecolotl-web/src/main/resources/etiqueta_en.properties
@@ -1,22 +1,22 @@
 menu=menu
 options=options
-select=seleccione una opci\u00F3n
-word.key=palabra clave
-write.text=write text
+select=select an option
+word.key=key word
+write.text=write a text
 description=description
-search=Escriba texto para filtrar...
-pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
-status=estatus
+search=write a text to seek...
+pages.total=pages {0, number} of {1,number} : total of lines {2, number}
+status=status
 password=password
 close.sesion=close session
 home=home
 correo.electronico=email
 logging.registry=registry
-logging.teacher=teacher
+logging.teacher=professor
 logging.student=student
 logging.nickname=nickname
-logging.forgot.password=olvide mi contrase\u00F1a
-logging.not.account=no tengo una cuenta
+logging.forgot.password=forgot password
+logging.not.account=already registered
 edit=edit
 detail=detail
 #
@@ -25,12 +25,12 @@ reply=reply
 commentary=commentary
 
 #no-encontrado.xhtml
-no.econtrado.title=¡Ups, sorry this page not exist!
-no.encontro.title=P\u00E1gina no encontrada
+no.econtrado.title=ups, something went wrong!
+no.encontro.title=page not found
 #sin-permiso.xhtml
-sin.permiso.title=Estimado usuario, no pudes visitar esta pagina ya que tu rol es: {0}, dar click en el boton para cerrar sesion
-no.permiso.title=Sin permiso
+sin.permiso.title=dear user you have no access to this page due to your role: {0}, click to close session
+no.permiso.title=without permission
 #no-manejable.xhtml
 no.manejable.title=Estimado usuario tenemos un inconveniente contacte a su administrador
-no.es.manejable.title=No manejable
+no.es.manejable.title=not manageable
 
