asignar actividad descargables

--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -87,8 +87,8 @@ activity.level=level
 activity.search=search
 activity.assign=assign
 activity.grammar=grammar
-didactic.guide=didactic guide
-activity.cards=cards
+didactic.guide=lesson plan
+activity.cards=disussion cards
 think-develop.and.share=think-develop and share
 
 #unicode
