--- a/tecolotl-web/src/main/resources/boton_en.properties
+++ b/tecolotl-web/src/main/resources/boton_en.properties
@@ -15,5 +15,9 @@ submit=send
 homework= go to HW
 do.homework=go to HW
 end=finish
+passwords=passwords
+report=report
+download=download
+evaluate=evaluate
 
 ready=ready!
