--- a/tecolotl-web/src/main/resources/boton_en.properties
+++ b/tecolotl-web/src/main/resources/boton_en.properties
@@ -19,5 +19,7 @@ passwords=passwords
 report=report
 download=download
 evaluate=evaluate
+qualify=qualify
+see.rating.details=see rating details
 
 ready=ready!
