se aplica estilo de cambio de color a rojo a los letreros de se necesita un valor

--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -106,10 +106,10 @@ no.grupo.=
 no.grupo.=
 
 #calificacion-mapamental.xhtml
-deficit=deficit
-regular=regular
-good=good
-excellent=excellent
+deficit= to improve
+regular= Satisfactory
+good= Good
+excellent=Outstanding
 you.need.to.write.a.comment.before.submitting.the.rating=you need to write a comment before submitting the rating
 
 #unicode
