se resuelve incidencia del mapamental 15, se da estilos al mensaje de se necesita un valor en el mapamental 15 y se traduce el letrero de se necesita un valor en todas las vistas de mapamental

--- a/tecolotl-web/src/main/resources/validacion/Messages_es.properties
+++ b/tecolotl-web/src/main/resources/validacion/Messages_es.properties
@@ -77,7 +77,7 @@
 # Component Errors
 # ==============================================================================
 javax.faces.component.UIInput.CONVERSION={0}: Se ha producido un error de conversi\u00f3n.
-javax.faces.component.UIInput.REQUIRED=se necesita un valor.
+javax.faces.component.UIInput.REQUIRED=ups, you missed somenthing.
 javax.faces.component.UIInput.UPDATE={0}: Se ha producido un error al procesar la informaci\u00f3n enviada. 
 javax.faces.component.UISelectOne.INVALID=el valor no es v\u00e1lido
 javax.faces.component.UISelectMany.INVALID=el valor no es v\u00e1lido
