traduccion del boton_en.properties qualify a Watch Scores

--- a/tecolotl-web/src/main/resources/boton_en.properties
+++ b/tecolotl-web/src/main/resources/boton_en.properties
@@ -19,7 +19,7 @@ passwords=passwords
 report=report
 download=download
 evaluate=evaluate
-qualify=qualify
+qualify=watch scores
 see.rating.details=see rating details
 
 ready=ready!
