traduccion del boton_en.properties de otro boton y utltimo

--- a/tecolotl-web/src/main/resources/boton_en.properties
+++ b/tecolotl-web/src/main/resources/boton_en.properties
@@ -19,7 +19,7 @@ passwords=passwords
 report=report
 download=download
 evaluate=evaluate
-qualify=watch scores
-see.rating.details=see rating details
+qualify=qualify
+see.rating.details=watch scores
 
 ready=ready!
