Se agrega los titulos del traducidos al ingles

--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -69,6 +69,7 @@ tareas.alumno.nickname=nickname
 tareas.alumno.level=lenguage level
 tareas.alumno.grade=school year
 tareas.alumno.group=group
+tareas.alumno.delete.message=you are about to delete this assignment, if you do it it will be lost. Are you sure you want to continue?
 
 #calificacion-gramatica
 calificacion.gramatica.title=word game
