letreros mapa mental

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -53,7 +53,7 @@ send.message=answers received
 send.message.error=85% of answers are requiered.
 send.message.transcript=you will need up to 10 minutes to complete this activity, do you have time?
 send.message.not.send=please fill in the blank to send!
-send.message.sentence.tip=seleccione una palabra para completar oración
+send.message.sentence.tip=seleccione una palabra para completar oraciï¿½n
 activity.help.message.video=Watch the video carefully
 activity.help.message.match=Match the columns
 activity.help.message.words=Make sentences using the words provided 
@@ -72,13 +72,13 @@ title.description.full.request=You need to fill in all the answers.
 mindmap.map2.title.description=blank cause and effect Diagram
 mindmap.activities.map2.title.answered=answered
 #graphic organizer 3
-mindmap.mindmap.map3.title.description=cronological order writing
+mindmap.mindmap.map3.title.description=chronological order writing
 #graphic organizer 4
 mindmap.map4.title.description.compare=compare and contrast
-mindmap.map4.title.description.how=how two things are a like and how they are diferent
+mindmap.map4.title.description.how=how two things are alike and how they are different
 #graphic organizer 5
 mindmap.map5.title.compare=compare & contrast
-map5.title.description.how=how are the same
+map5.title.description.how=how same
 #graphic organizer 7
 mindmap.map7.title.steps=steps to do an experiment
 #graphic organizer 8
