cambios mapa mental

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -78,7 +78,7 @@ mindmap.map4.title.description.compare=compare and contrast
 mindmap.map4.title.description.how=how two things are alike and how they are different
 #graphic organizer 5
 mindmap.map5.title.compare=compare & contrast
-map5.title.description.how=how same
+map5.title.description.how=how the same
 #graphic organizer 7
 mindmap.map7.title.steps=steps to do an experiment
 #graphic organizer 8
