se cambiaron crearon bundle de botones y me mensajes para modal eliminar una actividad, tambien se corriegieron estilos en las diferentes vistas de profesor

--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -11,6 +11,7 @@ dashboard.table.title.not.group=There's no class assigned
 dashboard.group=group
 dashboard.table.schoolgrade=grade
 dashboard.total.students=number of students
+dashboard.delete.activity=Are you sure you want to delete this activity?
 
 #admin-alumnos.xhtml
 student.administration.title= administration
