se cambiaron letreros modales dashboard profesor y se mejoro estilos en asignar actividad

--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -13,6 +13,13 @@ dashboard.table.schoolgrade=grade
 dashboard.total.students=number of students
 dashboard.delete.activity=Are you sure you want to delete this activity?
 
+#modal-borrar-actividad
+dashboard.modal.delete.activity.task=task
+dashboard.modal.delete.activity.question=powerful question
+dashboard.modal.delete.activity.assignment=assignment
+
+
+
 #admin-alumnos.xhtml
 student.administration.title= administration
 student.administration.nickname= student's nickname
