mensaje de los alumnos score

--- a/tecolotl-web/src/main/resources/alumno_en.properties
+++ b/tecolotl-web/src/main/resources/alumno_en.properties
@@ -19,6 +19,7 @@ dashboard.homework.done=activity progress
 dashboard.not.homework=no assignments 
 dashboard.empty=empty
 dashboard.score=score
+dashboard.no.answer=No answered activity
 
 #Activities
 #Navigation bar
