--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -126,6 +126,7 @@ csv.nickname=Nickname must be at least 4 characters or already exists
 csv.date=The format must be dd/mm/yyyy
 csv.level=A1,A2,B1,B2,C1,C2 allowed values
 csv.gender=Put M o F
+msj.nivel=Student's level updated
 
 
 #unicode
