Muestra el mensaje de forma correcta de fecha futura y fecha pasada

--- a/tecolotl-web/src/main/resources/etiqueta_en.properties
+++ b/tecolotl-web/src/main/resources/etiqueta_en.properties
@@ -34,3 +34,5 @@ no.permiso.title=without permission
 no.manejable.title=Estimado usuario tenemos un inconveniente contacte a su administrador
 no.es.manejable.title=not manageable
 
+validation.future.date=future date
+validacion.past.date=past date
